--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .grid {
@@ -15,44 +18,89 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
-    background: #276ef9;
+    background: #286EFA;
 }
 
 .account {
     grid-column: 1 / span 8;
     grid-row: 1 / span 12;
     background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+
+    form > input, select {
+        width: 480px;
+        height: 50px;
+        margin: 10px 0;
+        border: solid #EDEDED 1px;
+        border-radius: 4px;
+        padding: 10px 15px;
+        color: #777777
+    }
+}
+
+.haveAccount {
+    font-size: 15px;
+    color: #333333;
+    margin-top: 40px;
+    margin-bottom: 50;
 }
 
 .side {
     grid-column: 9 / span 4;
     grid-row: 1 / span 12;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
 }
 
 .input {
-    padding : 25%;
-    font-family : sans-serif;
+    width: 480px;
     font-size: 20px;
+    h1 {
+        font-size: 32px;
+        line-height: 38px;
+        letter-spacing: 0.26px;
+        color: #333333
+    }
 }
 
 .input-sign-in {
-    color: #276ef9;
+    color: #286EFA;
+    font-weight: bold;
+    text-decoration: none;
 }
 
-.swipe {
-    overflow: hidden;
-    visibility: hidden;
-    position: relative;
-  }
-  
-.swipe-wrap {
-    overflow: hidden;
-    position: relative;
+.side .text {
+    width: 340px;
+    color: white;
+    h1 {
+        font-size: 32px;
+        text-align: center;
+        letter-spacing: 0.26px;
+        line-height: 38px;
+        font-weight: bold;
+    }
+    p {
+        font-weight: 'regular';
+        font-size: 18px;
+        margin-top: 78px;
+        line-height: 30px;
+        letter-spacing: 0.26px;
+    }
 }
 
-.swipe-wrap > div {
-    float: left;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
+.small {
+    font-size: 12px;
+    color : #777777;
+    line-height: 20px;
+    letter-spacing: 0.26px;
+}
+
+.smallText {
+    font-size: 13px;
+    letter-spacing: 0.26px;
+    line-height: 25px;
+    color : #333333;
 }
