--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -29,7 +29,7 @@
     justify-content: center;
     align-items: center; 
 
-    form > input, select {
+    form input, select {
         width: 480px;
         height: 50px;
         margin: 10px 0;
@@ -38,6 +38,13 @@
         padding: 10px 15px;
         color: #777777
     }
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 .haveAccount {
@@ -104,3 +111,47 @@
     line-height: 25px;
     color : #333333;
 }
+
+  .form-row {
+    margin-bottom: 10px;
+    position: relative; 
+}
+
+.input-text {
+    background-color: white;
+    -webkit-appearance: none;
+    border: 1px solid #cccccc;
+    position: relative;
+    width: 100%;
+}       
+      
+.label-helper {
+    position: absolute;
+    opacity: 0;
+    transition: .2s top, .1s opacity;
+    top: 20px;
+    left: 15px;
+    z-index: 2; 
+    font-size: 12px;
+    color: #777777;
+    background-color: white;
+    padding: 0 2px;
+}
+      
+.input-text:focus + .label-helper, .input-text:invalid + .label-helper {
+    top: 6px;
+    font-size: 12px;
+    line-height: 1;
+    opacity: 1;
+    z-index: 1;
+}
+
+.input-text:invalid {
+    border: 1px solid #f00; 
+}
+
+.button {
+    background: #286EFA;
+    color: white !important;
+}
+      
